# DELPHI-Datasets

./: .envrc  README.md  environment.yaml  list_datasets1.sh  list_energies.sh  list_files.sh  list_matching.sh  pyproject.toml
data/: channels.csv  recids.json
json/: DELPHI-datasets-1990.json  DELPHI-datasets-1991.json  DELPHI-datasets-1992.json  DELPHI-datasets-1993.json  DELPHI-datasets-1995.json  DELPHI-datasets-1996.json
src/delphi_datasets/: checks.py  cli.py  db_tools.py  model.py  temp.py  test.db  test_model.py  tools.py
src/extract/: .gitignore  extract.cra  make.sh  run.sh  run_raw94.sh  run_short93.sh  run_short94.sh  test.py
