[tool.poetry]
name = "delphi-datasets"
version = "0.1.0"
description = ""
authors = ["Dietrich Liko <Dietrich.Liko@oeaw.ac.at>"]
readme = "README.md"
packages = [{include = "delphi_datasets", from = "src"}]
include = [
    { path="data", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.0"

[tool.poetry.scripts]
delphi-datasets = "delphi_datasets.cli:cli"

#[tool.ruff.lint]
#select = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
